docs/styles.css
/* css styles */

:root {
    --primary-color: #61223b;
    --secondary-color: #f8f9fa;
    --text-color: #333;
    --text-color-light: #666;
    --hover-color: #0072b1;
    --gap: 2rem;
    --border-radius: 8px;
    --transition-duration: 0.3s;
}

.navbar {
    background-color: var(--primary-color);
}

.navbar a {
    color: white;
}

.navbar-logo {
    max-height: 100px;
}

.navbar-container {
    max-width: 1400px;
    margin: 0 auto;
    padding: 0 var(--gap);
    display: flex;
    justify-content: space-between;
    align-items: center;
}

/* Team grid layout */
.team-grid {
    display: grid;
    display: -ms-grid; /* Fallback for IE */
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: var(--gap);
    margin: var(--gap) 0;
}

.team-member {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    border-radius: var(--border-radius);
    padding: 1rem;
    background-color: var(--secondary-color);
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    transition: transform var(--transition-duration) ease;
}

.team-member-content {
    flex-grow: 1;
}

.team-member-links {
    margin-top: 1rem;
}

.team-member:hover,
.team-member:focus {
    transform: translateY(-5px);
    outline: none; /* Remove default focus outline */
    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15); /* Add focus shadow */
}

.team-member img {
    width: 100%;
    height: auto;
    aspect-ratio: 1 / 1; 
    object-fit: cover;
    border-radius: 4px;
    margin-bottom: 1rem;
}

.team-member h3 {
    margin-bottom: 0.2rem;
    color: var(--text-color);
}

.team-member h4 {
    margin-top: 0;
    color: var(--text-color-light);
    font-weight: normal;
    font-style: italic;
    margin-bottom: 1rem;
}

.team-member p {
    margin-bottom: 1rem;
}

.team-member a {
    margin-right: 0.8rem;
    color: #555;
    font-size: 1.2rem;
    text-decoration: none;
}

.team-member a:hover {
    color: var(--hover-color);
}

/* Responsive adjustments */
@media (max-width: 768px) {
    .navbar-container {
        flex-direction: row-reverse;
    }

    .navbar-brand-container {
        order: -1;
    }

    .navbar-logo {
        max-height: 50px;
    }

    .team-grid {
        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
        gap: 1.5rem;
    }

    .team-member img {
        height: auto;
        aspect-ratio: 1 / 1; 
    }
}

